# hushhush

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/hushhush/: __init__.py  core.py  utils.py
tests/: test_core.py
